--- a/Java BE/Case Study/.classpath
+++ b/Java BE/Case Study/.classpath
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-14">
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/User/Documents/TekSystems/Java/jpaTestProject02/mysql-connector-java-8.0.23.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Documents/TekSystems/blockchain-cs-app-be/libraries/eclipselink/jlib/eclipselink.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Documents/TekSystems/blockchain-cs-app-be/libraries/eclipselink/jlib/jpa/javax.persistence.source_2.1.0.v201304241213.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Documents/TekSystems/blockchain-cs-app-be/libraries/eclipselink/jlib/jpa/javax.persistence_2.1.0.v201304241213.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/libraries">
+		<attributes>
+			<attribute name="owner.project.facets" value="jpt.jpa"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
