Got pubnub working- to a degree. Great saving point before going for greater abstraction/encapsulation

--- a/Java BE/Case Study/pom.xml
+++ b/Java BE/Case Study/pom.xml
@@ -48,6 +48,18 @@
 			<artifactId>mariadb-java-client</artifactId>
 			<version>2.7.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.pubnub</groupId>
+			<artifactId>pubnub-gson</artifactId>
+			<version>4.35.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.jetbrains/annotations -->
+		<dependency>
+			<groupId>org.jetbrains</groupId>
+			<artifactId>annotations</artifactId>
+			<version>13.0</version>
+		</dependency>
+
 
 	</dependencies>
 	<build>
