--- a/Java BE/Case Study/pom.xml
+++ b/Java BE/Case Study/pom.xml
@@ -5,6 +5,7 @@
 	<groupId>CaseStudy</groupId>
 	<artifactId>CaseStudy</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<properties>
 		<spring.version>5.3.5</spring.version>
 	</properties>
